@@ -1,5 +1,5 @@
 /*
- *  Copyright (C) 2003-2012  Anders Gavare.  All rights reserved.
+ *  Copyright (C) 2003-2018  Anders Gavare.  All rights reserved.
  *
  *  Redistribution and use in source and binary forms, with or without
  *  modification, are permitted provided that the following conditions are met:
@@ -25,7 +25,7 @@
  *  SUCH DAMAGE.
  *
  *
- *  COMMENT: ARCBIOS emulation
+ *  COMMENT: ARCBIOS and ARCS emulation
  */
 
 #include <stdio.h>
@@ -1769,20 +1769,21 @@ int arcbios_emul(struct cpu *cpu)
 		for (i=0; i<0x1000; i++) {
 			/*  Matching string at offset i?  */
 			int nmatches = 0;
+			uint64_t envptr = machine->machine_type == MACHINE_SGI ? ARC_ENV_STRINGS_SGI : ARC_ENV_STRINGS;
 			for (j=0; j<(ssize_t)strlen((char *)buf); j++) {
 				cpu->memory_rw(cpu, cpu->mem,
-				    (uint64_t)(ARC_ENV_STRINGS + i + j),
+				    (uint64_t)(envptr + i + j),
 				    &ch2, sizeof(char), MEM_READ, CACHE_NONE);
 				if (ch2 == buf[j])
 					nmatches++;
 			}
 			cpu->memory_rw(cpu, cpu->mem,
-			    (uint64_t)(ARC_ENV_STRINGS + i +
+			    (uint64_t)(envptr + i +
 			    strlen((char *)buf)), &ch2, sizeof(char),
 			    MEM_READ, CACHE_NONE);
 			if (nmatches == (int)strlen((char *)buf) && ch2=='=') {
 				cpu->cd.mips.gpr[MIPS_GPR_V0] =
-				    ARC_ENV_STRINGS + i +
+				    envptr + i +
 				    strlen((char *)buf) + 1;
 				return 1;
 			}
@@ -2257,23 +2258,39 @@ static void arc_environment_setup(struct machine *machine, int is64bit,
 		cpu->cd.mips.gpr[MIPS_GPR_A0] ++;
 	}
 
+	store_pointer_and_advance(cpu, &addr2, 0, is64bit);
+
 	cpu->cd.mips.gpr[MIPS_GPR_A2] = addr2;
+
+	if (machine->machine_type == MACHINE_SGI) {
+		/*
+		 *  The SGI O2 PROM contains an "env" section header like this:
+		 *
+		 *  00004000  00 00 00 00 00 00 00 00  53 48 44 52 00 00 04 00  |........SHDR....|
+		 *  00004010  03 03 00 00 65 6e 76 00  00 00 00 00 00 00 00 00  |....env.........|
+		 *  00004020  00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00  |................|
+		 *  00004030  00 00 00 00 31 2e 30 00  00 00 00 00 13 18 11 ae  |....1.0.........|
+		 *
+		 *  followed by environment variables at 0x4000. It is not required
+		 *  by NetBSD/OpenBSD/Linux, but Irix seems to hardcodedly look into
+		 *  the PROM address space for this header.
+		 */
+		store_32bit_word(cpu, ARC_ENV_SGI + 0x08, 0x53484452);
+		store_32bit_word(cpu, ARC_ENV_SGI + 0x0c, 0x00000400);
+		store_32bit_word(cpu, ARC_ENV_SGI + 0x10, 0x03030000);
+		store_32bit_word(cpu, ARC_ENV_SGI + 0x14, 0x656e7600);
+		store_32bit_word(cpu, ARC_ENV_SGI + 0x34, 0x312e3000);
+		store_32bit_word(cpu, ARC_ENV_SGI + 0x3c, 0x131811ae);
+		addr = ARC_ENV_STRINGS_SGI;
+	}
 
 	/*
 	 *  Add environment variables.  For each variable, add it
 	 *  as a string using add_environment_string(), and add a
 	 *  pointer to it to the ARC_ENV_POINTERS array.
 	 */
-	if (machine->x11_md.in_use) {
-		if (machine->machine_type == MACHINE_ARC) {
-			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
-			add_environment_string(cpu,
-			    "CONSOLEIN=multi()key()keyboard()console()", &addr);
-			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
-			add_environment_string(cpu,
-			    "CONSOLEOUT=multi()video()monitor()console()",
-			    &addr);
-		} else {
+	if (machine->machine_type == MACHINE_SGI) {
+		if (machine->x11_md.in_use) {
 			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
 			add_environment_string(cpu, "ConsoleIn=keyboard()",
 			    &addr);
@@ -2285,16 +2302,6 @@ static void arc_environment_setup(struct machine *machine, int is64bit,
 			    with SGI logo visible on Irix?  */
 			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
 			add_environment_string(cpu, "console=g", &addr);
-		}
-	} else {
-		if (machine->machine_type == MACHINE_ARC) {
-			/*  TODO: serial console for ARC?  */
-			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
-			add_environment_string(cpu,
-			    "CONSOLEIN=multi()serial(0)", &addr);
-			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
-			add_environment_string(cpu,
-			    "CONSOLEOUT=multi()serial(0)", &addr);
 		} else {
 			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
 			add_environment_string(cpu, "ConsoleIn=serial(0)",
@@ -2307,13 +2314,39 @@ static void arc_environment_setup(struct machine *machine, int is64bit,
 			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
 			add_environment_string(cpu, "console=d", &addr);
 		}
-	}
 
-	if (machine->machine_type == MACHINE_SGI) {
 		store_pointer_and_advance(cpu, &addr2, addr, is64bit);
 		add_environment_string(cpu, "AutoLoad=No", &addr);
-		store_pointer_and_advance(cpu, &addr2, addr, is64bit);
-		add_environment_string(cpu, "diskless=0", &addr);
+		
+		if (machine->bootdev_id < 0 || machine->force_netboot) {
+			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
+			add_environment_string(cpu, "diskless=1", &addr);
+
+			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
+			add_environment_string(cpu, "bootfile=bootp()server:/var/boot/client/unix", &addr);
+
+			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
+			add_environment_string(cpu,
+			    "SystemPartition=bootp()server:/var/boot/client",
+			    &addr);
+			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
+			add_environment_string(cpu,
+			    "OSLoadPartition=bootp()server:/var/boot/client",
+			    &addr);
+		} else {
+			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
+			add_environment_string(cpu, "diskless=0", &addr);
+
+			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
+			add_environment_string(cpu,
+			    "SystemPartition=pci(0)scsi(0)disk(2)rdisk(0)partition(8)",
+			    &addr);
+			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
+			add_environment_string(cpu,
+			    "OSLoadPartition=pci(0)scsi(0)disk(2)rdisk(0)partition(0)",
+			    &addr);
+		}
+
 		store_pointer_and_advance(cpu, &addr2, addr, is64bit);
 		add_environment_string(cpu, "volume=80", &addr);
 		store_pointer_and_advance(cpu, &addr2, addr, is64bit);
@@ -2326,17 +2359,8 @@ static void arc_environment_setup(struct machine *machine, int is64bit,
 		store_pointer_and_advance(cpu, &addr2, addr, is64bit);
 		add_environment_string(cpu, "nogfxkbd=1", &addr);
 
-		/*  TODO: 'xio(0)pci(15)scsi(0)disk(1)rdisk(0)partition(0)'
-		    on IP30 at least  */
+		/*  TODO IP30: 'xio(0)pci(15)scsi(0)disk(1)rdisk(0)partition(0)'  */
 
-		store_pointer_and_advance(cpu, &addr2, addr, is64bit);
-		add_environment_string(cpu,
-		    "SystemPartition=pci(0)scsi(0)disk(2)rdisk(0)partition(8)",
-		    &addr);
-		store_pointer_and_advance(cpu, &addr2, addr, is64bit);
-		add_environment_string(cpu,
-		    "OSLoadPartition=pci(0)scsi(0)disk(2)rdisk(0)partition(0)",
-		    &addr);
 		store_pointer_and_advance(cpu, &addr2, addr, is64bit);
 		add_environment_string(cpu, "OSLoadFilename=/unix", &addr);
 		store_pointer_and_advance(cpu, &addr2, addr, is64bit);
@@ -2349,7 +2373,7 @@ static void arc_environment_setup(struct machine *machine, int is64bit,
 		store_pointer_and_advance(cpu, &addr2, addr, is64bit);
 		add_environment_string(cpu, "crt_option=1", &addr);
 		store_pointer_and_advance(cpu, &addr2, addr, is64bit);
-		add_environment_string(cpu, "netaddr=10.0.0.1", &addr);
+		add_environment_string(cpu, "netaddr=10.0.0.2", &addr);
 
 		store_pointer_and_advance(cpu, &addr2, addr, is64bit);
 		add_environment_string(cpu, "keybd=US", &addr);
@@ -2383,6 +2407,24 @@ static void arc_environment_setup(struct machine *machine, int is64bit,
 		    machine->bootdev_id);
 		add_environment_string(cpu, tmp, &addr);
 		free(tmp);
+
+		if (machine->x11_md.in_use) {
+			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
+			add_environment_string(cpu,
+			    "CONSOLEIN=multi()key()keyboard()console()", &addr);
+			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
+			add_environment_string(cpu,
+			    "CONSOLEOUT=multi()video()monitor()console()",
+			    &addr);
+		} else {
+			/*  TODO: serial console for ARC?  */
+			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
+			add_environment_string(cpu,
+			    "CONSOLEIN=multi()serial(0)", &addr);
+			store_pointer_and_advance(cpu, &addr2, addr, is64bit);
+			add_environment_string(cpu,
+			    "CONSOLEOUT=multi()serial(0)", &addr);
+		}
 	}
 
 	/*  End the environment strings with an empty zero-terminated
